# ChordLaunchpad

./: README.md  package-lock.json  package.json
.github/workflows/: preview-release.yml
cargo-check-target/: .rustc_info.json
cargo-check-target/debug/.fingerprint/cfg-if-74c64009f24fcd60/: output-lib-cfg_if
cargo-check-target/debug/.fingerprint/proc-macro2-104b1de8b1d694c9/: output-build-script-build-script-build
cargo-check-target/debug/.fingerprint/quote-7f47f72891ace304/: output-build-script-build-script-build
cargo-check-target/debug/.fingerprint/unicode-ident-10f4d069e44ba2e4/: output-lib-unicode_ident
docs/: APP_GUIDE_ja.md  CHEATSHEET_ja.md  COMMAND_TABLE_ja.md  PREVIEW_RELEASE_ja.md  USER_GUIDE_ja.md
docs/web-help/: index.html
scripts/: run-tauri.mjs  start-vite-dev.mjs  start-vite-dev.ps1
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/data/: defaultTemplates.ts
src/lib/: midi.ts  music.ts
src/types/: music.ts
